--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ path = "./src/bin/pgrx_embed.rs"
 
 [dependencies]
 pgrx = "=0.12.8"
+pgrx-macros = "=0.12.8"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 regex = "1.0"
