--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ pgrx-macros = "=0.12.8"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 regex = "1.0"
+once_cell = "1.19"
 
 [dev-dependencies]
 pgrx-tests = "=0.12.8"
