--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,9 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 regex = "1.0"
 once_cell = "1.19"
+bincode = "1.3"
+flate2 = "1.0"
+chrono = { version = "0.4", features = ["serde"] }
 
 [dev-dependencies]
 pgrx-tests = "=0.12.8"
