--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,15 @@
 [package]
 name = "pg_tviews"
-version = "0.1.0"
+version = "0.1.0-beta.1"
 edition = "2021"
+authors = ["Lionel Hamayon <lionel.hamayon@evolution-digitale.fr>"]
+description = "Transactional materialized views with incremental refresh for PostgreSQL"
+license = "MIT"
+repository = "https://github.com/your-org/pg_tviews"
+homepage = "https://github.com/your-org/pg_tviews"
+documentation = "https://github.com/your-org/pg_tviews"
+keywords = ["postgresql", "materialized-views", "incremental-refresh", "database", "pgrx"]
+categories = ["database"]
 
 [lib]
 crate-type = ["cdylib", "rlib"]
