fix: Remove incompatible embed-bitcode flag from Rust config
The embed-bitcode=no flag is incompatible with LTO (Link Time Optimization),
causing CI/CD clippy checks to fail. Removed the incompatible flag to fix
CI/CD pipeline failures.

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -19,7 +19,7 @@ rustflags = [
   "-C", "codegen-units=1",
 
   # Reproducibility
-  "-C", "embed-bitcode=no",
+  # Note: embed-bitcode=no is incompatible with LTO, removed
 
   # Strip debug symbols in release
   "-C", "strip=symbols",
