docs: Fix Docker benchmark setup and replace placeholder URLs
This commit brings the documentation to production quality for 4-way
benchmark execution with proper Docker configuration.

Docker Configuration Fixes:
- Fix docker-compose.yml build context (parent directory contains both repos)
- Update dockerfile-benchmarks to use local jsonb_ivm instead of git clone
- Fix all COPY paths to use pg_tviews/ and jsonb_ivm/ prefixes
- Update volume mounts to work with correct build context
- Increase shared memory to 2GB and add memory limits (4-16GB)

Documentation Improvements:
- Add comprehensive directory structure prerequisites
- Document both docker build and docker-compose methods
- Update all PostgreSQL version references (13-18 supported)
- Add PostgreSQL 18 support to Cargo.toml (pg18 feature)
- Change default feature from pg17 to pg18
- Clarify pgrx version compatibility (library vs CLI tool)
- Fix all Docker build command examples with correct paths
- Update from 3 approaches to 4 approaches (added manual functions)

New Documentation:
- Add docs/benchmarks/results-interpretation.md (understanding results)
- Add manual benchmark data files for approaches 3 & 4
- Add manual schema files for non-extension testing

GitHub URL Cleanup:
- Replace all "your-org" placeholders with "fraiseql"
- Replace all "yourusername" placeholders with "fraiseql"
- Update 69+ GitHub URLs across all documentation
- Preserve external tool references (pgrx, sigstore, slsa-framework)

Files Changed:
- Docker: docker-compose.yml, dockerfile-benchmarks
- Docs: 20+ documentation files updated
- Benchmarks: 7+ benchmark files updated
- Config: Cargo.toml (PostgreSQL 18 support, default feature)

Breaking Changes: None
Migration Required: No

The Docker benchmark setup now works correctly with:
- Build context: parent directory containing pg_tviews/ and jsonb_ivm/
- PostgreSQL 18 with full extension support
- All 4 benchmark approaches (pg_tviews+jsonb_ivm, pg_tviews+native,
  manual functio

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,8 +1,8 @@
 services:
   pg_tviews_bench:
     build:
-      context: ..  # Build from parent directory (code/) to access both projects
-      dockerfile: pg_tviews/Dockerfile.benchmarks
+      context: ..  # Build from parent directory (contains pg_tviews)
+      dockerfile: pg_tviews/docker/dockerfile-benchmarks
     container_name: pg_tviews_bench
     environment:
       - POSTGRES_DB=pg_tviews_benchmark
@@ -11,12 +11,18 @@ services:
       - PGDATA=/var/lib/postgresql/data
     volumes:
       # Mount results directory for easy access from host
-      - ./test/sql/comprehensive_benchmarks/results:/benchmarks/results
+      - ../pg_tviews/test/sql/comprehensive_benchmarks/results:/benchmarks/results
       # Optional: mount PostgreSQL data for persistence
       - pgdata:/var/lib/postgresql/data
     ports:
       - "5433:5432"  # Map to 5433 to avoid conflict with host PostgreSQL
-    shm_size: 1gb  # Important for PostgreSQL performance
+    shm_size: 2gb  # Important for PostgreSQL performance (increase for large scale)
+    deploy:
+      resources:
+        limits:
+          memory: 16G  # Adjust based on scale: 4G for small, 8G for medium, 16G+ for large
+        reservations:
+          memory: 4G
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres -d pg_tviews_benchmark"]
       interval: 10s
