--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,12 +32,13 @@ chrono = { version = "0.4", features = ["serde"] }
 pgrx-tests = "=0.16.1"
 
 [features]
-default = ["pg17"]
+default = ["pg18"]
 pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
 pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
 pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
 pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
 pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
+pg18 = ["pgrx/pg18", "pgrx-tests/pg18"]
 pg_test = []
 
 [profile.dev]
