fix(pgrx): Fix SQL generation issues
Fixed 4 critical issues preventing pgrx SQL generation:

1. Fixed crate-type in Cargo.toml (line 15)
   - Changed from ["cdylib", "rlib"] to ["cdylib", "lib"]
   - pgrx requires "lib" not "rlib" for SQL generation

2. Added pgrx_embed macro to src/bin/pgrx_embed.rs
   - Was empty fn main() {}
   - Now has ::pgrx::pgrx_embed!();
   - Required for SQL entity generation

3. Added superuser field to pg_tviews.control
   - Was missing this required field
   - Added: superuser = false

4. Removed duplicate pg_tviews_handle_ddl_event() from metadata.rs
   - Was defined in both metadata.rs (PL/pgSQL) and event_trigger.rs (Rust)
   - Kept only the Rust version in event_trigger.rs
   - Metadata.rs now only creates the event trigger

Result:
- SQL generation now works correctly
- Generated 423 lines of SQL with 26 functions
- No duplicate function definitions
- Local build succeeds

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ keywords = ["postgresql", "materialized-views", "incremental-refresh", "database
 categories = ["database"]
 
 [lib]
-crate-type = ["cdylib", "rlib"]
+crate-type = ["cdylib", "lib"]
 
 [[bin]]
 name = "pgrx_embed_pg_tviews"
