feat(docker): Fix Docker benchmark environment configuration
Docker Setup Improvements:
- Fix docker-compose.yml context path (.. → ../..)
- Fix volume mount path for results directory
- Add run-benchmarks-docker.sh helper script
- Add comprehensive Docker README.md documentation

Context Fix:
- Build context now correctly points to /home/lionel/code/ (parent of pg_tviews)
- Contains both pg_tviews/ and jsonb_ivm/ as required by Dockerfile
- Volume mount adjusted to match new context

Helper Script Features:
- Checks if Docker container is running
- Waits for PostgreSQL to be ready
- Runs benchmarks inside container
- Shows results location on host
- Color-coded output for better UX

Documentation:
- Architecture overview
- Quick start guide
- Troubleshooting section
- Development workflow
- Container details and file structure
- Performance tuning guidance
- CI/CD integration example

Docker Environment:
- PostgreSQL 18 on port 5433 (avoids conflict with local:5432)
- Pre-installed: pg_tviews + jsonb_ivm extensions
- Isolated benchmark environment
- Results mounted to host filesystem

Benefits:
- No need to install extensions locally
- Reproducible benchmark environment
- Easy CI/CD integration
- Complete isolation from local PostgreSQL

Usage:
  cd docker
  docker compose build       # Build image (5-10 min)
  docker compose up -d       # Start container
  ./run-benchmarks-docker.sh small  # Run benchmarks

Related: Phase 1 fixes now testable in Docker environment

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   pg_tviews_bench:
     build:
-      context: ..  # Build from parent directory (contains pg_tviews)
+      context: ../..  # Build from parent of pg_tviews (contains both pg_tviews and jsonb_ivm)
       dockerfile: pg_tviews/docker/dockerfile-benchmarks
     container_name: pg_tviews_bench
     environment:
@@ -11,7 +11,7 @@ services:
       - PGDATA=/var/lib/postgresql/data
     volumes:
       # Mount results directory for easy access from host
-      - ../pg_tviews/test/sql/comprehensive_benchmarks/results:/benchmarks/results
+      - ../test/sql/comprehensive_benchmarks/results:/benchmarks/results
       # Optional: mount PostgreSQL data for persistence
       - pgdata:/var/lib/postgresql/data
     ports:
