chore(benchmarks): Ignore generated benchmark result files
- Add results/*.log to .gitignore
- Add results/*.csv to .gitignore
- Prevents permission conflicts between Docker and host user

Related: Phase 3 environment fixes

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 /target/
 Cargo.lock
+
+# Benchmark results (generated files)
+test/sql/comprehensive_benchmarks/results/*.log
+test/sql/comprehensive_benchmarks/results/*.csv
