fix(ci): Fix all GitHub Actions workflows for PGRX compatibility
- Fix 'Multiple pg$VERSION features found' error by using
  --no-default-features --features pgXX instead of --all-features
- Add PostgreSQL APT repository (PGDG) for PG17 support on Ubuntu 24.04
- Update deprecated actions to latest versions:
  - actions/checkout@v3 → v4
  - actions-rs/toolchain@v1 → dtolnay/rust-toolchain@stable
  - actions/upload-artifact@v3 → v4
  - github/codeql-action/upload-sarif@v2 → v3
  - docker/setup-buildx-action@v2 → v3
  - docker/login-action@v2 → v3
  - docker/build-push-action@v4 → v6
  - actions/setup-python@v4 → v5
  - actions/github-script@v6 → v7
  - softprops/action-gh-release@v1 → v2
  - actions/attest-build-provenance@v1 → v2
  - slsa-github-generator@v1.9.0 → v2.0.0
- Add proper PostgreSQL and pgrx initialization to all workflows
- Fix SLSA provenance job ordering (build before provenance)
- Add required permissions for security scanning workflows

--- a/.github/workflows/clippy.yml
+++ b/.github/workflows/clippy.yml
@@ -2,18 +2,37 @@ name: Clippy Strict
 
 on: [push, pull_request]
 
+env:
+  CARGO_TERM_COLOR: always
+  # Use PostgreSQL 16 for clippy checks (available in Ubuntu 24.04 default repos)
+  PG_VERSION: 16
+
 jobs:
   clippy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: actions-rs/toolchain@v1
+
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@stable
         with:
-          toolchain: stable
           components: clippy
+
+      - name: Install PostgreSQL ${{ env.PG_VERSION }}
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y postgresql-${{ env.PG_VERSION }} \
+                                  postgresql-server-dev-${{ env.PG_VERSION }}
+
+      - name: Install pgrx
+        run: |
+          cargo install --locked cargo-pgrx
+          cargo pgrx init --pg${{ env.PG_VERSION }} \
+            /usr/lib/postgresql/${{ env.PG_VERSION }}/bin/pg_config
+
       - name: Run strict clippy
         run: |
-          cargo clippy --all-targets --all-features -- \
+          cargo clippy --lib --bins --no-default-features --features pg${{ env.PG_VERSION }} -- \
             -D warnings \
             -D clippy::all \
             -D clippy::pedantic \
