--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,9 @@ on:
   pull_request:
     branches: [ main, dev ]
 
+env:
+  CARGO_TERM_COLOR: always
+
 jobs:
   test:
     name: Test on PostgreSQL ${{ matrix.pg_version }}
@@ -19,6 +22,13 @@ jobs:
 
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
+
+      - name: Add PostgreSQL APT repository
+        run: |
+          # Add the official PostgreSQL APT repository for versions not in Ubuntu repos
+          sudo install -d /usr/share/postgresql-common/pgdg
+          sudo curl -o /usr/share/postgresql-common/pgdg/apt.postgresql.org.asc --fail https://www.postgresql.org/media/keys/ACCC4CF8.asc
+          sudo sh -c 'echo "deb [signed-by=/usr/share/postgresql-common/pgdg/apt.postgresql.org.asc] https://apt.postgresql.org/pub/repos/apt $(lsb_release -cs)-pgdg main" > /etc/apt/sources.list.d/pgdg.list'
 
       - name: Install PostgreSQL ${{ matrix.pg_version }}
         run: |
@@ -38,4 +48,4 @@ jobs:
 
       - name: Build extension
         run: |
-          cargo pgrx install --release
+          cargo pgrx install --release --pg${{ matrix.pg_version }}
