fix(ci): Fix CI workflows and implement savepoint depth tracking
CI/Build Fixes:
- Replace once_cell::Lazy with std::sync::LazyLock (Rust 1.80+)
- Remove once_cell dependency from Cargo.toml
- Fix pgrx install command syntax (--pg$VERSION -> --features pg$VERSION)
- Remove clippy::pedantic from CI (too many false positives for pgrx code)
- Change #[cfg(any(test, feature = "pg_test"))] to #[cfg(feature = "pg_test")]
  for modules using #[pg_test] macro
- Fix missing nested_paths field in TviewMeta test
- Fix single_char_pattern lint in src/lib.rs

Phase 1 Implementation (savepoint depth):
- Implement get_savepoint_depth() using pg_sys::GetCurrentTransactionNestLevel()
- Add unit tests for savepoint depth conversion logic
- Enables correct queue snapshot/restore during SAVEPOINT/ROLLBACK

Documentation:
- Add TODO fix phase plans in .phases/todo-fixes/
- Apply doc comment linting (backticks for identifiers)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,4 +48,4 @@ jobs:
 
       - name: Build extension
         run: |
-          cargo pgrx install --release --pg${{ matrix.pg_version }}
+          cargo pgrx install --release --no-default-features --features pg${{ matrix.pg_version }}
