--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,6 @@ pgrx = "=0.16.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 regex = "1.0"
-once_cell = "1.19"
 bincode = "1.3"
 flate2 = "1.0"
 chrono = { version = "0.4", features = ["serde"] }
@@ -52,9 +51,9 @@ panic = "unwind"
 
  [lints.clippy]
  # Phase 10B: Enable pedantic lints gradually
- # For now, just ensure basic clippy compliance
+ # For now, just ensure basic clippy compliance with clippy::all
  all = { level = "deny", priority = -1 }
- # pedantic = "warn"  # TODO: Enable after fixing warnings
+ # pedantic = "warn"  # TODO: Enable after fixing 400+ warnings
  # nursery = "warn"   # TODO: Enable after fixing warnings
  # Disable specific lints that conflict with PostgreSQL FFI
  missing_errors_doc = "allow"  # FFI functions often can't document all Postgres errors
