--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,7 +38,7 @@ pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
 pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
 pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
 pg18 = ["pgrx/pg18", "pgrx-tests/pg18"]
-pg_test = []
+ pg_test = ["pgrx-tests/pg_test"]
 
 [profile.dev]
 panic = "unwind"
