--- a/.github/workflows/clippy.yml
+++ b/.github/workflows/clippy.yml
@@ -11,6 +11,25 @@ jobs:
         with:
           toolchain: stable
           components: clippy
+
+      - name: Add PostgreSQL APT repository
+        run: |
+          # Add the official PostgreSQL APT repository for versions not in Ubuntu repos
+          sudo install -d /usr/share/postgresql-common/pgdg
+          sudo curl -o /usr/share/postgresql-common/pgdg/apt.postgresql.org.asc --fail https://www.postgresql.org/media/keys/ACCC4CF8.asc
+          sudo sh -c 'echo "deb [signed-by=/usr/share/postgresql-common/pgdg/apt.postgresql.org.asc] https://apt.postgresql.org/pub/repos/apt $(lsb_release -cs)-pgdg main" > /etc/apt/sources.list.d/pgdg.list'
+
+      - name: Install PostgreSQL 16
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y postgresql-16 \
+                                  postgresql-server-dev-16
+
+      - name: Install pgrx
+        run: |
+          cargo install --locked cargo-pgrx
+          cargo pgrx init --pg16 /usr/lib/postgresql/16/bin/pg_config
+
       - name: Run strict clippy
         run: |
           cargo clippy --all-targets --all-features -- \
