fix(ci): Fix CI/CD pipeline issues
- Install jq in security audit workflow for JSON parsing
- Add timeout handling to PostgreSQL installations (10min)
- Use --no-install-recommends to speed up installations
- Start PostgreSQL service before running tests
- Fix YAML indentation issues
- Add proper error handling for installation failures

This should resolve timeout and missing dependency issues.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,15 +29,26 @@ jobs:
 
       - name: Install PostgreSQL ${{ matrix.pg_version }}
         run: |
-          sudo apt-get update
-          sudo apt-get install -y postgresql-${{ matrix.pg_version }} \
-                                  postgresql-server-dev-${{ matrix.pg_version }}
+          # Increase timeout for slow package installations
+          timeout 600 bash -c '
+            sudo apt-get update
+            sudo apt-get install -y --no-install-recommends postgresql-${{ matrix.pg_version }} \
+                                    postgresql-server-dev-${{ matrix.pg_version }}
+          ' || {
+            echo "PostgreSQL installation failed or timed out"
+            exit 1
+           }
 
       - name: Install pgrx
         run: |
           cargo install --locked cargo-pgrx
           cargo pgrx init --pg${{ matrix.pg_version }} \
             /usr/lib/postgresql/${{ matrix.pg_version }}/bin/pg_config
+
+      - name: Start PostgreSQL service
+        run: |
+          sudo systemctl start postgresql
+          sudo systemctl enable postgresql
 
       - name: Run tests
         run: |
