--- a/.github/workflows/security-audit.yml
+++ b/.github/workflows/security-audit.yml
@@ -18,8 +18,10 @@ jobs:
         with:
           toolchain: stable
 
-      - name: Install cargo-audit
-        run: cargo install cargo-audit
+      - name: Install cargo-audit and jq
+        run: |
+          cargo install cargo-audit
+          sudo apt-get update && sudo apt-get install -y jq
 
       - name: Run cargo audit
         run: cargo audit --json > audit-report.json
