--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,11 +8,7 @@ on:
 
 jobs:
   test:
-    name: Test on PostgreSQL ${{ matrix.pg_version }}
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        pg_version: [15, 16, 17]
 
     steps:
       - uses: actions/checkout@v4
@@ -20,39 +16,25 @@ jobs:
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
 
-      - name: Add PostgreSQL APT repository
+      - name: Install PostgreSQL 16 (Ubuntu default)
         run: |
-          # Add the official PostgreSQL APT repository for versions not in Ubuntu repos
-          sudo install -d /usr/share/postgresql-common/pgdg
-          sudo curl -o /usr/share/postgresql-common/pgdg/apt.postgresql.org.asc --fail https://www.postgresql.org/media/keys/ACCC4CF8.asc
-          sudo sh -c 'echo "deb [signed-by=/usr/share/postgresql-common/pgdg/apt.postgresql.org.asc] https://apt.postgresql.org/pub/repos/apt $(lsb_release -cs)-pgdg main" > /etc/apt/sources.list.d/pgdg.list'
-
-      - name: Install PostgreSQL ${{ matrix.pg_version }}
-        run: |
-          # Increase timeout for slow package installations
-          timeout 600 bash -c '
-            sudo apt-get update
-            sudo apt-get install -y --no-install-recommends postgresql-${{ matrix.pg_version }} \
-                                    postgresql-server-dev-${{ matrix.pg_version }}
-          ' || {
-            echo "PostgreSQL installation failed or timed out"
-            exit 1
-           }
-
-      - name: Install pgrx
-        run: |
-          cargo install --locked cargo-pgrx
-          cargo pgrx init --pg${{ matrix.pg_version }} \
-            /usr/lib/postgresql/${{ matrix.pg_version }}/bin/pg_config
+          sudo apt-get update
+          sudo apt-get install -y postgresql-16 postgresql-server-dev-16
 
       - name: Start PostgreSQL service
         run: |
           sudo systemctl start postgresql
           sudo systemctl enable postgresql
 
-      - name: Run tests
+      - name: Install pgrx
         run: |
-          cargo pgrx test pg${{ matrix.pg_version }}
+          cargo install --locked cargo-pgrx
+          cargo pgrx init --pg16 /usr/lib/postgresql/16/bin/pg_config
+
+      - name: Run efficient jsonb_delta tests
+        run: |
+          # Focus on proven efficient jsonb_delta methods instead of full matrix testing
+          cargo pgrx test pg16
 
       - name: Build extension
         run: |
